Fix overflow in files-list-sidebar

--- a/app/stylesheets/builtin-pages/components/files-list-sidebar.less
+++ b/app/stylesheets/builtin-pages/components/files-list-sidebar.less
@@ -39,6 +39,7 @@
       text-align: center;
       font-size: 1.2rem;
       margin-bottom: 10px;
+      word-wrap: break-word;
     }
 
     td {
